'Card Configuration' label

--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,7 @@
         <div class="form-group"><div class="input-group"><span class="input-group-addon" data-toggle="tooltip" data-placement="bottom" title="Vendor"><i class="fa fa-handshake-o fa-fw"></i></span>
             <select required id="catalogVendor" class="form-control dropDown">' + vendorOptions + '</select></div>
         </div>
+        <label for="">Card Configuration</label>
         <div class="form-group">
             <div class="input-group" id="cardOptions">
                 <label for="">
